112. Implementing the Form Submit Button

--- a/templates/bill_form_page.html
+++ b/templates/bill_form_page.html
@@ -8,7 +8,7 @@
 <body>
     <h2>The Bill Form</h2>
     <p>Fill in the form and click the button to get the results</p>
-    <form action="/results" method="post">
+    <form action='/results' method="post">
         {{billform.amount.label}} {{billform.amount}}
         <br>
         {{billform.period.label}} {{billform.period}}
